scripts/slurm-1352497.out
Collecting torch==1.9.1
  Could not find a version that satisfies the requirement torch==1.9.1 (from versions: 0.1.6.post17, 0.1.6.post20, 0.1.6.post22, 0.1.7.post2, 0.1.8.post1, 0.1.9.post1, 0.1.9.post2, 0.1.10.post1, 0.1.10.post2, 0.1.11.post4, 0.1.11.post5, 0.1.12.post1, 0.1.12.post2, 0.2.0.post1, 0.2.0.post2, 0.2.0.post3, 0.3.0, 0.3.0.post2, 0.3.0.post3, 0.3.0.post4, 0.3.1, 0.4.0, 0.4.1, 1.0.0, 1.0.1, 1.0.1.post2, 1.1.0, 1.2.0, 1.2.0+cpu, 1.2.0+cu92, 1.3.0, 1.3.0+cpu, 1.3.0+cu100, 1.3.0+cu92, 1.3.1, 1.3.1+cpu, 1.3.1+cu100, 1.3.1+cu92, 1.4.0, 1.4.0+cpu, 1.4.0+cu100, 1.4.0+cu92, 1.5.0+cpu, 1.5.0+cu92)
No matching distribution found for torch==1.9.1
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
/var/spool/slurmd/job1352497/slurm_script: line 23: conda: command not found
Collecting mmcv-full==1.4.0
  Cache entry deserialization failed, entry ignored
  Cache entry deserialization failed, entry ignored
  Downloading https://files.pythonhosted.org/packages/48/ba/23bbe698dcd353f7684e1301f14290c9000ba126e43a64799aa86b4a6b92/mmcv-full-1.4.0.tar.gz (403kB)
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/1352497/pip-build-1XZHvw/mmcv-full/setup.py", line 122
        major, minor, *rest = cv2.__version__.split('.')
                      ^
    SyntaxError: invalid syntax
    
    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/1352497/pip-build-1XZHvw/mmcv-full/
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting mmdet==2.14.0
  Downloading https://files.pythonhosted.org/packages/b0/ec/741d34d81bc0cbf4b4946513704187db1987ce706e452145ad3df42ebeca/mmdet-2.14.0.tar.gz (441kB)
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/1352497/pip-build-oGm4_z/mmdet/setup.py", line 40
        print(f'Compiling {name} without CUDA')
                                             ^
    SyntaxError: invalid syntax
    
    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/1352497/pip-build-oGm4_z/mmdet/
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting mmsegmentation==0.14.1
  Cache entry deserialization failed, entry ignored
  Downloading https://files.pythonhosted.org/packages/39/c2/d930c786fca1ece0d41d52d5f1475133a01c428a83f963c4882e5df81c38/mmsegmentation-0.14.1.tar.gz (129kB)
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/1352497/pip-build-6FMD1x/mmsegmentation/setup.py", line 98, in <module>
        version=get_version(),
      File "/tmp/1352497/pip-build-6FMD1x/mmsegmentation/setup.py", line 15, in get_version
        exec(compile(f.read(), version_file, 'exec'))
      File "mmseg/version.py", line 14
        version_info.append(f'rc{patch_version[1]}')
                                                  ^
    SyntaxError: invalid syntax
    
    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/1352497/pip-build-6FMD1x/mmsegmentation/
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Cloning into 'mmdetection3d'...
Note: checking out 'v0.17.1'.

You are in 'detached HEAD' state. You can look around, make experimental
changes and commit them, and you can discard any commits you make in this
state without impacting any branches by performing another checkout.

If you want to create a new branch to retain commits you create, you may
do so (now or later) by using -b with the checkout command again. Example:

  git checkout -b new_branch_name

HEAD is now at f110797... Bump to v0.17.1 (#978)
Obtaining file:///home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d
  Running setup.py (path:/home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d/setup.py) egg_info for package from file:///home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d
    Running command python setup.py egg_info
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d/setup.py", line 185
        warnings.warn(f'Cannot copy file {src_path}.')
                                                    ^
    SyntaxError: invalid syntax
Cleaning up...
Command "python setup.py egg_info" failed with error code 1 in /home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d/
Exception information:
Traceback (most recent call last):
  File "/usr/lib/python2.7/site-packages/pip/basecommand.py", line 215, in main
    status = self.run(options, args)
  File "/usr/lib/python2.7/site-packages/pip/commands/install.py", line 307, in run
    requirement_set.prepare_files(finder)
  File "/usr/lib/python2.7/site-packages/pip/req/req_set.py", line 370, in prepare_files
    ignore_dependencies=self.ignore_dependencies))
  File "/usr/lib/python2.7/site-packages/pip/req/req_set.py", line 489, in _prepare_file
    abstract_dist.prep_for_dist()
  File "/usr/lib/python2.7/site-packages/pip/req/req_set.py", line 127, in prep_for_dist
    self.req_to_install.run_egg_info()
  File "/usr/lib/python2.7/site-packages/pip/req/req_install.py", line 425, in run_egg_info
    command_desc='python setup.py egg_info')
  File "/usr/lib/python2.7/site-packages/pip/utils/__init__.py", line 718, in call_subprocess
    % (command_desc, proc.returncode, cwd))
InstallationError: Command "python setup.py egg_info" failed with error code 1 in /home/bpoffet/DLAV_SemesterProject/scripts/mmdetection3d/
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting timm
  Cache entry deserialization failed, entry ignored
  Downloading https://files.pythonhosted.org/packages/de/29/4f9b0732a7eb5bd39e5873e52d648d6240b64997dbbaf09cf0996be1bf9c/timm-0.6.13.tar.gz (459kB)
Collecting torch>=1.7 (from timm)
  Could not find a version that satisfies the requirement torch>=1.7 (from timm) (from versions: 1.0.0, 1.0.1, 1.0.1.post2, 1.1.0, 1.2.0, 1.3.0, 1.3.1, 1.4.0)
No matching distribution found for torch>=1.7 (from timm)
You are using pip version 8.1.2, however version 23.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Cloning into 'VoxFormer'...
